@@ -4,6 +4,7 @@
 
 package net.sourceforge.pmd.lang.rule;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.LinkedHashSet;
@@ -274,64 +275,83 @@ public abstract class AbstractRule extends AbstractPropertySource implements Rul
         // Override as needed
     }
 
+    // TODO remove those methods, make Rules have type-safe access to a RuleContext
+
     /**
-     * @see RuleViolationFactory#addViolation(RuleContext, Rule, Node, String,
-     * Object[])
+     * Cast the argument to a {@link RuleContext}. Use it to report violations:
+     * <pre>{@code
+     *  asCtx(data).addViolation(node);
+     *  asCtx(data).addViolationWithMessage(node, "Some message");
+     * }</pre>
+     *
+     * In PMD 7, rules will have type-safe access to a RuleContext, and
+     * this will be deprecated as useless. In PMD 6, you can use this to
+     * stop using the deprecated {@link #addViolation(Object, Node)} overloads
+     * of this class.
+     */
+    protected final RuleContext asCtx(Object ctx) {
+        if (ctx instanceof RuleContext) {
+            assert isThisRule(((RuleContext) ctx).getRule())
+                : "not an appropriate rule context!";
+            return (RuleContext) ctx;
+        } else {
+            throw new ClassCastException("Unexpected context object! " + ctx);
+        }
+    }
+
+    private boolean isThisRule(Rule rule) {
+        return rule == this // NOPMD CompareObjectsWithEquals
+            || rule instanceof AbstractDelegateRule && this.isThisRule(((AbstractDelegateRule) rule).getRule());
+    }
+
+    /**
+     * @see RuleContext#addViolation(Node)
+     * @deprecated Replace with {@code asCtx(data).addViolation(node)}.
      */
     public void addViolation(Object data, Node node) {
-        RuleContext ruleContext = (RuleContext) data;
-        ruleContext.getLanguageVersion().getLanguageVersionHandler().getRuleViolationFactory().addViolation(ruleContext,
-                this, node, this.getMessage(), new Object[0]);
+        asCtx(data).addViolation(node);
     }
 
     /**
-     * @see RuleViolationFactory#addViolation(RuleContext, Rule, Node, String,
-     * Object[])
+     * @see RuleContext#addViolation(Node, Object[])
+     *
+     * @deprecated Replace with {@code asCtx(data).addViolation(node, arg)}.
      */
     public void addViolation(Object data, Node node, String arg) {
-        RuleContext ruleContext = (RuleContext) data;
-        ruleContext.getLanguageVersion().getLanguageVersionHandler().getRuleViolationFactory().addViolation(ruleContext,
-                this, node, this.getMessage(), new Object[]{arg});
+        asCtx(data).addViolation(node, arg);
     }
 
     /**
-     * @see RuleViolationFactory#addViolation(RuleContext, Rule, Node, String,
-     * Object[])
+     * @see RuleContext#addViolation(Node, Object[])
+     *
+     * @deprecated Replace with {@code asCtx(data).addViolation(node, arg1, arg2)}.
      */
-    public void addViolation(Object data, Node node, Object[] args) {
-        RuleContext ruleContext = (RuleContext) data;
-        ruleContext.getLanguageVersion().getLanguageVersionHandler().getRuleViolationFactory().addViolation(ruleContext,
-                this, node, this.getMessage(), args);
+    public void addViolation(Object data, Node node, Object... args) {
+        asCtx(data).addViolation(node, args);
     }
 
     /**
-     * @see RuleViolationFactory#addViolation(RuleContext, Rule, Node, String,
-     * Object[])
+     * @see RuleContext#addViolationWithMessage(Node, String)
+     * @deprecated Replace with {@code asCtx(data).addViolationWithMessage(node, message)}.
      */
     public void addViolationWithMessage(Object data, Node node, String message) {
-        RuleContext ruleContext = (RuleContext) data;
-        ruleContext.getLanguageVersion().getLanguageVersionHandler().getRuleViolationFactory().addViolation(ruleContext,
-                this, node, message, new Object[0]);
+        asCtx(data).addViolationWithMessage(node, message);
     }
 
     /**
-     * @see RuleViolationFactory#addViolation(RuleContext, Rule, Node, String,
-     * Object[])
+     * @see RuleContext#addViolationWithPosition(Node, int, int, String, Object...)
+     * @deprecated Replace with {@code asCtx(data).addViolationWithPosition(node, beginLine, endLine, message)}.
      */
     public void addViolationWithMessage(Object data, Node node, String message, int beginLine, int endLine) {
-        RuleContext ruleContext = (RuleContext) data;
-        ruleContext.getLanguageVersion().getLanguageVersionHandler().getRuleViolationFactory().addViolation(ruleContext,
-                this, node, message, beginLine, endLine, new Object[0]);
+        asCtx(data).addViolationWithPosition(node, beginLine, endLine, message);
     }
 
     /**
-     * @see RuleViolationFactory#addViolation(RuleContext, Rule, Node, String,
-     * Object[])
+     * @see RuleContext#addViolationWithMessage(Node, String, Object...)
+     * @deprecated Replace with {@code asCtx(data).addViolationWithMessage(node, message, args)}.
      */
     public void addViolationWithMessage(Object data, Node node, String message, Object[] args) {
-        RuleContext ruleContext = (RuleContext) data;
-        ruleContext.getLanguageVersion().getLanguageVersionHandler().getRuleViolationFactory().addViolation(ruleContext,
-                this, node, message, args);
+        asCtx(data).addViolationWithMessage(node, message, args);
     }
 
     /**
@@ -374,13 +394,14 @@ public abstract class AbstractRule extends AbstractPropertySource implements Rul
     @SuppressWarnings("unchecked")
     @Override
     public Rule deepCopy() {
-        Rule rule = null;
+        Rule result;
         try {
-            rule = getClass().newInstance();
-        } catch (InstantiationException | IllegalAccessException ignored) {
+            result = getClass().getConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException ignored) {
             // Can't happen... we already have an instance
             throw new RuntimeException(ignored); // in case it happens anyway, something is really wrong...
         }
+        Rule rule = result;
         rule.setName(getName());
         rule.setLanguage(getLanguage());
         rule.setMinimumLanguageVersion(getMinimumLanguageVersion());
